<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.demonavigationdrawer.Fragments.FormularioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/valor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_valor1"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/valor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_valor2"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Soma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/txt_soma" />

            <Button
                android:id="@+id/Subtracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/txt_subtrcao" />

            <Button
                android:id="@+id/Multiplicacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/txt_multiplicacao" />

            <Button
                android:id="@+id/Divisao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/txt_divisao" />
        </LinearLayout>

        <TextView
            android:id="@+id/Resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Resultado" />
    </LinearLayout>

</FrameLayout>
